name: RMP
version: 0.0.1
license: BSD3
maintainer: Noam Lewis <jones.noamle@gmail.com>
bug-reports: mailto:jones.noamle@gmail.com
category: System, Robotics
synopsis: Binding to code that controls a Segway RMP
Tested-With:   GHC == 6.10.4
description:
        This library provides an interface to a USB-connected Segway RMP.
        .
        It is based on code and information from <http://www.ai.sri.com/~vincent/segway.php>, 
        and was tested on a Segway RMP 200.
        .
        WARNING: The Segway RMP is a dangerous (and massive) device, use this library with care. 
        The library comes without warranty, and you may find the Segway running loose, harming people.
   
build-type: Simple
cabal-version:  >= 1.2
extra-source-files:
   src/System/RMP/rmpusb.h
   src/System/RMP/canio.h
   src/System/RMP/canio_rmpusb.h

library
   exposed-modules:
      System.RMP
      System.RMP.USB
   c-sources:
      src/System/RMP/rmpusb.cpp
      src/System/RMP/canio_rmpusb.cpp
   hs-Source-Dirs: src
   extra-libraries: canlib,ftd2xx,stdc++
   build-depends: base >= 4, allocated-processor
   ghc-options: -Wall


executable test-rmp
  c-sources:
      src/System/RMP/rmpusb.cpp
      src/System/RMP/canio_rmpusb.cpp
  hs-Source-Dirs: src
  Build-Depends: base >=4 && <5, allocated-processor
  main-is: Test.hs
  Ghc-Options: -Wall 
  Ghc-Prof-Options:  -prof -auto-all 
  extra-libraries: canlib,ftd2xx,stdc++
  other-modules: System.RMP.USB, System.RMP


--source-repository head
--  type: git
--  location: git://github.com/sinelaw/RMP.git
